--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,30 @@ body{
 }
 
 /*about*/
+.aboutbtn{
+  display: flex;
+  position: relative;
+  width:7em;
+  height:25px;
+  margin-left: 2.5%;
+  margin-top: 2.5%;
+  background-color:rgb(53, 52, 52);
+  color:white;
+  font-family:serif;
+  font-size: 1em;
+  padding-bottom: 23px;
+  border-radius: 5px;
+  
+  
+  
+
+}
 .aboutpage{
   background-color: white;
   min-height: 50vh;
   width:95%;
-  margin: 2.5%;
+  margin-left: 2.5%;
+  
   border-radius: 5px;
 }
 .textrey{
@@ -66,7 +85,8 @@ img{
   flex-direction: column;
   position: relative;
   color: white;
-  margin: 2.5%;
+  margin-left: 2.5%;
+  margin-top: 0%;
   border-radius: 5px;
   background-color: #ffffff;  
 }
